# LightGBM_study_inference

./: README.md  pyproject.toml
src/: .env  Settings.py  data_loader.py  main.py  rule.yaml  sample.csv  test_manual.py
src/data/: test_rule_ok.yaml  test_sample_error.csv
